# research_papers

./: .gitignore  README.md  pyproject.toml
dynamic_bt/: .gitignore  .kedro.yml  README.md  kedro_cli.py  setup.cfg
dynamic_bt/conf/base/: catalog.yml  parameters.yml
dynamic_bt/data/03_primary/: nba_season.csv
dynamic_bt/docs/source/: conf.py  index.rst
dynamic_bt/src/: setup.py
dynamic_bt/src/dynamic_bt/: __init__.py  pipeline.py  run.py
dynamic_bt/src/dynamic_bt/data_scraping/: scrape_nba.py
dynamic_bt/src/dynamic_bt/feature_engineering/: weighted_ma.py
dynamic_bt/src/dynamic_bt/nodes/: dynamic_bt.py
dynamic_bt/src/dynamic_bt/pipelines/: dynamic_bt.py
dynamic_bt/src/tests/: conftest.py  test_run.py
dynamic_bt/src/tests/data_scraping/: test_scrape_nba.py
dynamic_bt/src/tests/feature_engineering/: test_weighted_ma.py
dynamic_bt/src/tests/nodes/: test_dynamic_bt.py
high_dim_bt/: .kedro.yml  README.md  kedro_cli.py  setup.cfg
high_dim_bt/conf/base/: catalog.yml  parameters.yml
high_dim_bt/docs/source/: conf.py  index.rst
high_dim_bt/src/: requirements.txt  setup.py
high_dim_bt/src/high_dim_bt/: __init__.py  pipeline.py  run.py
high_dim_bt/src/high_dim_bt/data_engineering/: data_ingestion.py
high_dim_bt/src/high_dim_bt/models/: abstract_high_dm.py  basic_dynamic_bt.py  model_1.py
high_dim_bt/src/high_dim_bt/nodes/: data_engineering.py  data_science.py
high_dim_bt/src/high_dim_bt/pipelines/: data_engineering.py  data_science.py
high_dim_bt/src/tests/: conftest.py  test_run.py
high_dim_bt/src/tests/test_models/: test_model_1.py  (+2 more)
(+2 files in other folders)
