[tool.poetry]
name = "research_papers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">3.5 <3.8"
kedro = "^0.15.9"
lxml = "^4.5.0"
requests = "^2.23.0"
datetime = "^4.3"
numpy = "^1.18.2"
statsmodels = "^0.11.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
autopep8 = "^1.5.1"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
